Vocabulary and Matching

--- a/NLP_Python_Basics/vocabulary_and_matching.ipynb
+++ b/NLP_Python_Basics/vocabulary_and_matching.ipynb
@@ -315,6 +315,186 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above section so far, we have learned to use token patterns to perform rule-based matching."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Phrase Matching\n",
+    "\n",
+    "Often a more efficient way is to actually match on a terminology list and in that case we are going to use a Phrase Matcher, in order to create a document object from a list of phrases and pass that to the matcher instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spacy.matcher import PhraseMatcher"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matcher = PhraseMatcher(nlp.vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('reaganomics.txt') as f:\n",
+    "    doc3 = nlp(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phrase_list = ['voodoo economics', 'supply-side economics', 'trickle-down economics', 'free-market economics']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phrase_patterns = [nlp(text) for text in phrase_list]   #list of docs in phrase patterns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[voodoo economics,\n",
+       " supply-side economics,\n",
+       " trickle-down economics,\n",
+       " free-market economics]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phrase_patterns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spacy.tokens.doc.Doc"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(phrase_patterns[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matcher.add('EconMatcher', phrase_patterns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "found_matches = matcher(doc3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3680293220734633682, 41, 45),\n",
+       " (3680293220734633682, 49, 53),\n",
+       " (3680293220734633682, 54, 56),\n",
+       " (3680293220734633682, 61, 65),\n",
+       " (3680293220734633682, 673, 677),\n",
+       " (3680293220734633682, 2987, 2991)]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "found_matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3680293220734633682 EconMatcher 41 45 supply-side economics\n",
+      "3680293220734633682 EconMatcher 49 53 trickle-down economics\n",
+      "3680293220734633682 EconMatcher 54 56 voodoo economics\n",
+      "3680293220734633682 EconMatcher 61 65 free-market economics\n",
+      "3680293220734633682 EconMatcher 673 677 supply-side economics\n",
+      "3680293220734633682 EconMatcher 2987 2991 trickle-down economics\n"
+     ]
+    }
+   ],
+   "source": [
+    "for match_id, start, end in found_matches:\n",
+    "    string_id = nlp.vocab.strings[match_id]      #get string representation\n",
+    "    span = doc3[start:end]                        #get matched span\n",
+    "    print(match_id, string_id, start, end, span.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above we saw how we can create list of phrases to match on."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
